[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/PropSprite.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tiles/assets_version1.1.png" type="Texture" id=2]
[ext_resource path="res://Shaders/props_material.tres" type="Material" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 3, 0, 59, 96 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 7.5, 32 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 15, 27 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 3, 2.125 )

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 5, 5.5 )

[sub_resource type="RectangleShape2D" id=6]
resource_local_to_scene = true
extents = Vector2( 3.25, 2.75 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="PropSprite" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 0, 4 )
z_index = 2
texture = SubResource( 1 )

[node name="HideArea" type="Area2D" parent="."]
position = Vector2( 0, -41 )
collision_layer = 512
collision_mask = 512

[node name="PineShape" type="CollisionShape2D" parent="HideArea"]
position = Vector2( 0, 10 )
shape = SubResource( 2 )
disabled = true

[node name="TreeShape" type="CollisionShape2D" parent="HideArea"]
position = Vector2( 0, -5 )
shape = SubResource( 3 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="TreeShape2" type="CollisionShape2D" parent="HideArea"]
position = Vector2( 0, 31.125 )
shape = SubResource( 4 )
disabled = true

[node name="PlantShape" type="CollisionShape2D" parent="HideArea"]
position = Vector2( 0, 36 )
shape = SubResource( 5 )
disabled = true

[node name="RockShape" type="CollisionShape2D" parent="HideArea"]
position = Vector2( 0, 33 )
shape = SubResource( 6 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0, 7 )
polygon = PoolVector2Array( -15.6, 1.25, 0, -6.4, 15.6, 1.25, 0, 8.9 )

[connection signal="area_entered" from="HideArea" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="HideArea" to="." method="_on_Area2D_area_exited"]
